--- a/sign up.css
+++ b/sign up.css
@@ -9,7 +9,7 @@ body{
     background-image: url(logo.jpg);
     background-size: cover;
     width: auto;
-    height: auto;
+    height: 17vh;
     margin-right: 20%;
     border-radius: 70px;
 
