--- a/tahir.css
+++ b/tahir.css
@@ -104,14 +104,19 @@ nav ul li:hover ul {
 {
     padding: 15px;
     text-align: center;
-    background: white;
+    background: yellowgreen;
+    font-size: larger;
+    font-style: italic;
 }
 .btn 
 {
     background: yellow;
     color: black;
     text-decoration: none;
-    text-align:left;
+    text-align:center;
+    font-size: large;
+    font-style:inherit;
+    
 }
 .name
 {
