--- a/tahir.css
+++ b/tahir.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 body{
     margin:10;
     padding: 10;
@@ -6,14 +9,20 @@ body{
     background-size: cover;
     height: 17vh;
     background-image: url(bac.jpg);
-}
+      }
+      @media (min-width: 768px) and (max-width: 991px) {
+        ...
+        }
+
 .logo
 {
     background-image: url(bac.webp);
     background-size: cover;
     width:100%;
     height:70vh;
-    
+    position: relative;
+    overflow: hidden;
+
 }
 nav
 {
@@ -21,7 +30,8 @@ nav
     height: auto;
     display: inline-block;
     background: black;
-    text-align: left;
+    text-align: center;
+    position: relative;
 }
 nav ul{
     float: right;
@@ -90,15 +100,18 @@ nav ul li:hover ul {
 .gallary
 {
     margin: 5px;
-    margin-top: 10px;
+    margin-top: 20px;
     border:solid;
     float: left;
     width: 380px;
+    position: relative;
+    overflow: hidden;
 }
 .gallary img 
 {
     width: 100%;
     height: 45vh;
+    position: relative;
 }
 .description
 {
